--- a/language-model/Word2Vec-Demo.ipynb
+++ b/language-model/Word2Vec-Demo.ipynb
@@ -238,6 +238,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reference\n",
+    "\n",
+    "* [ nlp-tutorial](https://github.com/graykode/nlp-tutorial)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
