--- a/language-model/nnlm-Demo.ipynb
+++ b/language-model/nnlm-Demo.ipynb
@@ -107,11 +107,9 @@
     "        \n",
     "        # [batch_size, n_step, m]\n",
     "        X = self.C(X) \n",
-    "        \n",
     "        # [batch_size, n_step, m]-->[batch_size, n_step * m] \n",
     "        # 把一个句子的前n个词的表示拉平\n",
     "        X = X.view(-1, n_step * m) \n",
-    "        \n",
     "        # [batch_size, n_step * m] * [n_step*m, n_hidden] + d = [batch_size,n_hidden]\n",
     "        tanh = torch.tanh(self.d + torch.mm(X, self.H))\n",
     "        \n",
@@ -146,18 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1000 cost = 0.122461\n",
-      "Epoch: 2000 cost = 0.015361\n",
-      "Epoch: 3000 cost = 0.004809\n",
-      "Epoch: 4000 cost = 0.002055\n",
-      "Epoch: 5000 cost = 0.001008\n"
+      "Epoch: 1000 cost = 0.000058\n",
+      "Epoch: 2000 cost = 0.000032\n",
+      "Epoch: 3000 cost = 0.000018\n",
+      "Epoch: 4000 cost = 0.000010\n",
+      "Epoch: 5000 cost = 0.000005\n"
      ]
     }
    ],
@@ -184,9 +182,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[2],\n",
-      "        [5],\n",
-      "        [1]])\n"
+      "tensor([[0],\n",
+      "        [1],\n",
+      "        [3]])\n"
      ]
     }
    ],
@@ -211,9 +209,46 @@
     }
    ],
    "source": [
+    "# 打印出预测训练数据的结果看看\n",
     "for i,input_item in enumerate(input_batch):\n",
     "    print(' '.join( [number_dict[index] for index in input_item]),end=' --> ')\n",
     "    print(number_dict[predict[i].item()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['dog', 'coffee', 'love', 'milk', 'hate', 'i', 'like']\n",
+      "Parameter containing:\n",
+      "tensor([[-1.2507, -0.6013],\n",
+      "        [-0.0152,  0.6605],\n",
+      "        [-0.5897,  0.6183],\n",
+      "        [-0.4523,  1.2665],\n",
+      "        [-1.9365, -1.5738],\n",
+      "        [ 1.2336,  0.1728],\n",
+      "        [ 1.8577, -0.0450]], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 打印训练得到的“副产品”——词向量\n",
+    "print(word_list)\n",
+    "print(model.C.weight)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reference\n",
+    "\n",
+    "* [ nlp-tutorial](https://github.com/graykode/nlp-tutorial)"
    ]
   },
   {
